added icon for webpage

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv='pragma' content='no-cache'>
     <title>webMethods Helm Charts Repository</title>
     <link rel="stylesheet" type="text/css" href="resources/static/css/style.css"/>
+    <link rel="icon" href="resources/static/img/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" type="text/css" href="wm_node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="wm_node_modules/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css" />
