No need for repo update command after adding

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="dlt-card w-100 no-gutters large-logo" style="margin-top: 15px;">
                 <p>
                     To use the webMethods charts, add this repository to your Helm configuration:<br><br>
-                    <b>helm repo add webMethods https://charts.webmethods.io && helm repo update</b>
+                    <b>helm repo add webMethods https://charts.webmethods.io</b>
                 </p>
                 <p>
                     Once added, you can search for and install webMethods charts using the Helm CLI.
