Promoting to production by run 3291617

--- a/resources/static/html/base-index.html
+++ b/resources/static/html/base-index.html
@@ -51,7 +51,7 @@
             <div class="info-header dlt-card" style="margin-top: 15px">
                 <p>
                     To use the webMethods charts, add this repository to your Helm configuration: 
-                    <b>helm repo add webMethods https://charts.webmethods.io</b>
+                    <b id="helm-repo-add-command-holder"></b>
                 </p>
                 <p style="margin: 0;">
                     Once added, you can search for and install webMethods charts using the Helm CLI.
