Promoting to production by Run Number: 34, Run Attempt: 1

--- a/resources/static/html/base-index.html
+++ b/resources/static/html/base-index.html
@@ -28,7 +28,7 @@
                 <div class="header-wrap">
                     <header class="container col-12 no-margin no-padding main-head">
                         <a class="brand" href="/">
-                            <img src="resources/static/img/logo.svg" alt="Logo">
+                            <img src="resources/static/img/logo.svg" alt="Logo" style="height: 30px;">
                         </a>
                         <div style="margin-left: 50px;">webMethods Helm Charts Repository</div>
                         <div class="dlt-form-item dlt-search dlt-search--sync dlt-search--open col-2" style="margin-left:auto">
