Refreshing charts repository

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
-<body class="d-flex flex-column min-vh-100" generationId="33">
+<body class="d-flex flex-column min-vh-100" generationId="34">
     <div class="container col-12 mr-0 ml-0 pl-0 pr-0">
         <div class="row no-gutters">
             <div class="col-12">
                 <div class="header-wrap">
                     <header class="container col-12 no-margin no-padding main-head">
                         <a class="brand" href="/">
-                            <img src="resources/static/img/logo.svg" alt="Logo">
+                            <img src="resources/static/img/logo.svg" alt="Logo" style="height: 30px;">
                         </a>
                         <div style="margin-left: 50px;">webMethods Helm Charts Repository</div>
                         <div class="dlt-form-item dlt-search dlt-search--sync dlt-search--open col-2" style="margin-left:auto">
