--- a/resources/static/html/base-chart-page.html
+++ b/resources/static/html/base-chart-page.html
@@ -30,7 +30,7 @@
                 <div class="header-wrap">
                     <header class="container col-12 no-margin no-padding main-head">
                         <a class="brand" href="/">
-                            <img src="resources/static/img/logo.svg" alt="Logo">
+                            <img src="resources/static/img/logo.svg" alt="Logo" style="height: 30px;">
                         </a>
                         <div style="margin-left: 50px;">webMethods Helm Charts Repository</div>
                     </header>
