--- a/microservicesruntime_10.15_1.0.0.html
+++ b/microservicesruntime_10.15_1.0.0.html
@@ -30,7 +30,7 @@
                 <div class="header-wrap">
                     <header class="container col-12 no-margin no-padding main-head">
                         <a class="brand" href="/">
-                            <img src="resources/static/img/logo.svg" alt="Logo">
+                            <img src="resources/static/img/logo.svg" alt="Logo" style="height: 30px;">
                         </a>
                         <div style="margin-left: 50px;">webMethods Helm Charts Repository</div>
                     </header>
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <div id="body" generationId="34"><div class="mx-0 pr-0 pl-6ml-0" style="margin-top: 0px !important">
+    <div id="body" generationId="35"><div class="mx-0 pr-0 pl-6ml-0" style="margin-top: 0px !important">
                     <div style="align-items: center;display: flex;margin: 20px;">
                         <div style="padding-left: 15px; width: 80%;">microservicesruntime / Application Version: 10.15 / Chart Version: 1.0.0</div>
 
@@ -262,5 +262,6 @@
     <script src="resources/static/js/helm-copy-button.js"></script>
     <script src="wm_node_modules/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
     <script src="wm_node_modules/@softwareag/dlt-components/js/delite.min.js"></script>
+
 
 </html>
