--- a/resources/static/html/base-index.html
+++ b/resources/static/html/base-index.html
@@ -71,7 +71,7 @@
     </div>
 
     <footer class="dlt-footer mt-auto">
-        <p>Copyright © 2024 Software AG, Darmstadt, Germany and/or Software AG USA Inc., Reston, VA, USA, and/or its subsidiaries and/or its affiliates and/or their licensors.</p>
+        <p>Copyright Super iPaaS Integration LLC, an IBM Company 2024</p>
     </footer>
 
     <script src="resources/static/js/utils.js"></script>
