Promoting to production by Run Number: 37, Run Attempt: 1

--- a/resources/static/html/base-chart-page.html
+++ b/resources/static/html/base-chart-page.html
@@ -43,7 +43,7 @@
     <div>
 
     <footer class="dlt-footer mt-auto">
-        <p>Copyright Super iPaaS Integration LLC, an IBM Company 2024</p>
+        <p>Copyright IBM Corp. 2024, 2025</p>
     </footer>
 
     <script src="resources/static/js/helm-copy-button.js"></script>
