--- a/resources/static/html/base-index.html
+++ b/resources/static/html/base-index.html
@@ -71,7 +71,7 @@
     </div>
 
     <footer class="dlt-footer mt-auto">
-        <p>Copyright Super iPaaS Integration LLC, an IBM Company 2024</p>
+        <p>Copyright IBM Corp. 2024, 2025</p>
     </footer>
 
     <script src="resources/static/js/utils.js"></script>
