Refreshing charts repository

--- a/integrationserver_10.15_1.0.0.html
+++ b/integrationserver_10.15_1.0.0.html
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <div id="body" generationId="36"><div class="mx-0 pr-0 pl-6ml-0" style="margin-top: 0px !important">
+    <div id="body" generationId="37"><div class="mx-0 pr-0 pl-6ml-0" style="margin-top: 0px !important">
                     <div style="align-items: center;display: flex;margin: 20px;">
                         <div style="padding-left: 15px; width: 80%;">integrationserver / Application Version: 10.15 / Chart Version: 1.0.0</div>
 
@@ -256,7 +256,7 @@
                 </div></div>
 
     <footer class="dlt-footer mt-auto">
-        <p>Copyright Super iPaaS Integration LLC, an IBM Company 2024</p>
+        <p>Copyright IBM Corp. 2024, 2025</p>
     </footer>
 
     <script src="resources/static/js/helm-copy-button.js"></script>
