--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
-<body class="d-flex flex-column min-vh-100" generationId="36">
+<body class="d-flex flex-column min-vh-100" generationId="37">
     <div class="container col-12 mr-0 ml-0 pl-0 pr-0">
         <div class="row no-gutters">
             <div class="col-12">
@@ -157,7 +157,7 @@
     </div>
 
     <footer class="dlt-footer mt-auto">
-        <p>Copyright Super iPaaS Integration LLC, an IBM Company 2024</p>
+        <p>Copyright IBM Corp. 2024, 2025</p>
     </footer>
 
     <script src="resources/static/js/utils.js"></script>
